src/test/resources/invalid/noStatementEnd.sbsc
// Parser should fail if there's no statement end

println("bazinga")